// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`features/content-explorer/item-list/ItemListIcon render() should render correct folder icon 1`] = `
<IconCell
  rowData={
    Object {
      "extension": undefined,
      "has_collaborations": false,
      "is_externally_owned": false,
      "type": "folder",
    }
  }
/>
`;

exports[`features/content-explorer/item-list/ItemListIcon render() should render correct folder icon 2`] = `
<IconCell
  rowData={
    Object {
      "extension": undefined,
      "has_collaborations": true,
      "is_externally_owned": false,
      "type": "folder",
    }
  }
/>
`;

exports[`features/content-explorer/item-list/ItemListIcon render() should render correct folder icon 3`] = `
<IconCell
  rowData={
    Object {
      "extension": undefined,
      "has_collaborations": true,
      "is_externally_owned": true,
      "type": "folder",
    }
  }
/>
`;

exports[`features/content-explorer/item-list/ItemListIcon render() should render correct folder icon 4`] = `
<IconCell
  rowData={
    Object {
      "extension": undefined,
      "has_collaborations": false,
      "is_externally_owned": true,
      "type": "folder",
    }
  }
/>
`;
